[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Images/background_image.jpg" type="Texture" id=1]
[ext_resource path="res://Resources/audio/alarm-bell.wav" type="AudioStream" id=2]
[ext_resource path="res://Resources/Scripts/Node2D.gd" type="Script" id=3]

[sub_resource type="StreamTexture" id=1]
resource_local_to_scene = true
resource_name = "floating_background"
flags = 4
load_path = "res://.import/timer_floating_background_mini.png-941c869328f48d97b181153a5c6dd3d7.stex"

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Resources/Fonts/volkhorn/VollkornBlack-gx2EE.otf"

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Resources/Fonts/volkhorn/VollkornRegular-ZVJEZ.otf"

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = SubResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Background_Image" type="NinePatchRect" parent="."]
margin_right = 3264.0
margin_bottom = 2448.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 400.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
margin_left = 1.86719
margin_top = 2.62298
margin_right = 387.867
margin_bottom = 152.623
rect_min_size = Vector2( 300, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="TextureRect/HBoxContainer"]
margin_right = 20.0
margin_bottom = 150.0
rect_min_size = Vector2( 20, 150 )
custom_fonts/normal_font = SubResource( 3 )
tab_size = 2
scroll_active = false

[node name="RTL_MINUTES" type="RichTextLabel" parent="TextureRect/HBoxContainer"]
margin_left = 24.0
margin_right = 159.0
margin_bottom = 150.0
rect_min_size = Vector2( 135, 150 )
custom_fonts/normal_font = SubResource( 3 )
visible_characters = 2
tab_size = 2
text = "30"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="TextureRect/HBoxContainer"]
margin_left = 163.0
margin_right = 208.0
margin_bottom = 150.0
rect_min_size = Vector2( 45, 150 )
custom_fonts/normal_font = SubResource( 3 )
visible_characters = 1
tab_size = 1
text = ":"
scroll_active = false

[node name="RTL_SECONDS" type="RichTextLabel" parent="TextureRect/HBoxContainer"]
margin_left = 212.0
margin_right = 372.0
margin_bottom = 150.0
rect_min_size = Vector2( 160, 150 )
custom_fonts/normal_font = SubResource( 3 )
visible_characters = 2
tab_size = 2
text = "00"
scroll_active = false

[node name="RichTextLabel5" type="RichTextLabel" parent="TextureRect/HBoxContainer"]
margin_left = 376.0
margin_right = 386.0
margin_bottom = 150.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/normal_font = SubResource( 3 )
tab_size = 2
scroll_active = false

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 8.98975
margin_top = 2.99658
margin_right = 1008.99
margin_bottom = 302.997
rect_min_size = Vector2( 1000, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect2"]
margin_left = 10.0
margin_top = 2817.0
margin_right = 1999.0
margin_bottom = 2998.0
custom_fonts/normal_font = SubResource( 5 )
visible_characters = 600
tab_size = 24
text = "Image Credits: 
Black Hanging Bridge Surrounded by Green Forest Trees 
Kaique Rocha   https://www.pexels.com/@kaiquestr"
scroll_active = false

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
